--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,6 +1,7 @@
 [build]
 builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
+dockerContext = "backend"
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT --workers 2"
