--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,11 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
+dockerfilePath = "backend/Dockerfile"
 dockerContext = "backend"
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT --workers 2"
+watchPatterns = ["backend/**"]
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
