--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 backend/.env
 backend/.venv
-
+.env.dev
 frontend/.env.local
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
