--- a/backend/.env
+++ b/backend/.env
@@ -31,3 +31,8 @@ BACKEND_PORT=8001
 
 # Logging (More verbose in development)
 LOG_LEVEL=debug
+
+# Database URL for SQLAlchemy (constructed from above components)
+DATABASE_URL=postgresql+asyncpg://humanline_user:humanline_dev_password@localhost:5432/humanline_dev
+# Alternative SQLite URL for local development (no PostgreSQL required):
+# DATABASE_URL=sqlite+aiosqlite:///./humanline_dev.db
