--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,43 @@
-# FastAPI and core dependencies
-fastapi==0.117.1
-uvicorn==0.37.0
-pydantic==2.11.9
-pydantic-settings==2.11.0
-
-# Database
-sqlalchemy==2.0.43
-asyncpg==0.30.0
-psycopg2-binary==2.9.10
+# Generated with uv pip freeze
 alembic==1.16.5
-
-# Authentication and Security
-python-jose[cryptography]==3.5.0
-passlib[argon2,bcrypt]==1.7.4
-python-multipart==0.0.20
-
-# Validation and utilities
+annotated-types==0.7.0
+anyio==4.11.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+asyncpg==0.30.0
+bcrypt==5.0.0
+cffi==2.0.0
+click==8.3.0
+cryptography==46.0.1
+dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
-python-dotenv==1.1.1
-
-# Development tools (optional for production)
+fastapi==0.117.1
 fastapi-debug-toolbar==0.6.3
-
-# Required for async operations
 greenlet==3.2.4
+h11==0.16.0
+idna==3.10
+jinja2==3.1.6
+mako==1.3.10
+markupsafe==3.0.3
+passlib==1.7.4
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.23
+pydantic==2.11.9
+pydantic-core==2.33.2
+pydantic-extra-types==2.10.5
+pydantic-settings==2.11.0
+pyinstrument==5.1.1
+python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+sqlalchemy==2.0.43
+sqlparse==0.5.3
+starlette==0.48.0
+typing-extensions==4.15.0
+typing-inspection==0.4.1
+uvicorn==0.37.0
