--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.37.0",
+    "aiosmtplib>=3.0.0",
+    "jinja2>=3.1.6",
 ]
 
 [project.scripts]
