--- a/env.example
+++ b/env.example
@@ -50,9 +50,16 @@ FRONTEND_PORT=3000
 NGINX_PORT=80
 NGINX_SSL_PORT=443
 
-# === OPTIONAL: EMAIL CONFIGURATION ===
-# SMTP_HOST=smtp.gmail.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@gmail.com
-# SMTP_PASSWORD=your-app-password
-# FROM_EMAIL=noreply@yourdomain.com
+# === EMAIL CONFIGURATION ===
+# Email confirmation feature toggle (true/false)
+REQUIRE_EMAIL_CONFIRMATION=true
+
+# SMTP settings for sending confirmation emails
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+FROM_EMAIL=noreply@yourdomain.com
+
+# Email confirmation token expiration (in hours)
+EMAIL_CONFIRMATION_EXPIRE_HOURS=24
