chore: Refactor GitHub Actions workflow to set database URLs at job level for improved testing consistency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,6 +82,12 @@ jobs:
     name: 🧪 Test Python ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
+    needs: code-quality
+    
+    env:
+      # Set database URLs at job level for all steps
+      DATABASE_URL: ${{ matrix.os == 'ubuntu-latest' && 'postgresql://testuser:testpassword@localhost:5432/testdb' || 'sqlite:///./test.db' }}
+      TEST_DATABASE_URL: ${{ matrix.os == 'ubuntu-latest' && 'postgresql+asyncpg://testuser:testpassword@localhost:5432/testdb' || 'sqlite+aiosqlite:///./test.db' }}
     
     strategy:
       fail-fast: false # Continue testing other versions if one fails
@@ -131,10 +137,6 @@ jobs:
     
     - name: 🗄️ Set up Test Database
       working-directory: ./backend
-      env:
-        # Use PostgreSQL on Linux, SQLite on Windows/macOS
-        DATABASE_URL: ${{ matrix.os == 'ubuntu-latest' && 'postgresql://testuser:testpassword@localhost:5432/testdb' || 'sqlite:///./test.db' }}
-        TEST_DATABASE_URL: ${{ matrix.os == 'ubuntu-latest' && 'postgresql+asyncpg://testuser:testpassword@localhost:5432/testdb' || 'sqlite+aiosqlite:///./test.db' }}
       run: |
         # Run database migrations for integration tests
         uv run alembic upgrade head
@@ -154,9 +156,6 @@ jobs:
     - name: 🔗 Run Integration Tests
       working-directory: ./backend
       env:
-        # Use PostgreSQL on Linux, SQLite on Windows/macOS
-        DATABASE_URL: ${{ matrix.os == 'ubuntu-latest' && 'postgresql://testuser:testpassword@localhost:5432/testdb' || 'sqlite:///./test.db' }}
-        TEST_DATABASE_URL: ${{ matrix.os == 'ubuntu-latest' && 'postgresql+asyncpg://testuser:testpassword@localhost:5432/testdb' || 'sqlite+aiosqlite:///./test.db' }}
         ENVIRONMENT: testing
       run: |
         uv run pytest tests/integration/ \
